<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="main"
            type="vn.edu.tdmu.imuseum.views.MainActivity"/>
    </data>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ccbfd8f5"
    tools:context="vn.edu.tdmu.imuseum.views.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/smart_city"
                    app:srcCompat="@drawable/nenkhongmau" />

                <!--<ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="visible"
                    app:srcCompat="@mipmap/ic_logoapp"
                    android:contentDescription="@string/icon_app" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/theme_primary_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.synnapps.carouselview.CarouselView
                    android:id="@+id/carouselview"
                    android:layout_width="0dp"
                    android:layout_height="210dp"
                    android:layout_weight="1"
                    app:fillColor="#FFFFFFFF"
                    app:pageColor="#00000000"
                    app:radius="6dp"
                    app:slideInterval="3000"
                    app:strokeColor="#FF777777"
                    app:strokeWidth="1dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnBeacon"
                        android:layout_width="0dp"
                        android:gravity="center_vertical|center"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_background_main"
                        android:drawableTop="@drawable/ic_local_library_black_24px"
                        android:text="@string/hi_n_v_t"
                        android:textColor="#ffffff" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnMap"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_background_map"
                        android:text="@string/map"
                        android:drawableTop="@drawable/ic_vr_material"
                        android:textColor="#ffffff" />

                    <Button
                        android:id="@+id/btnArtifact"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_background_favorite"
                        android:text="@string/favotite"
                        android:drawableTop="@drawable/ic_favorite_black_24px"
                        android:textColor="#ffffff" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSetting"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_background_setting"
                        android:text="@string/setting"
                        android:drawableTop="@drawable/ic_settings_black_24px"
                        android:textColor="#ffffff"
                        android:onClick="@{ () -> main.openLanguageScreen() }"/>

                    <Button
                        android:id="@+id/btnAbout"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_error_black_24px"
                        android:background="@drawable/btn_background_about"
                        android:text="@string/about"
                        android:textColor="#ffffff" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
</layout>
