<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vn.edu.tdmu.imuseum.views.ArtifactDetailSaveActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:background="@drawable/hinhnenchinhhai"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lnlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintTop_creator="1">

                <RelativeLayout
                    android:id="@+id/relatiImage"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageArtifactSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/hinh_anh_hien_vat"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/drum" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imgCloseSave"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:contentDescription=""
                            app:srcCompat="@drawable/ic_close_white" />

                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:background="@color/theme_primary_light"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNameSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.92"
                    android:text="@string/tr_ng_ng_ng_s_n"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/mautrang"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="@+id/linearLayout3"
                app:layout_constraintRight_toLeftOf="@+id/linearLayout3"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtName2Save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@color/mautrang"
                        android:text="Trống Đồng Đông Sơn"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/theme_primary_dark"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtTitleSave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ng_s_n_thanh_ho"
                        android:textAlignment="center"
                        android:textColor="@color/theme_primary_light"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/txtDesSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="\tĐây là cái trống đồng, vậy thôi xin đừng hỏi nhiều quá  \n\tHay Quá ha"
                        android:textColor="@color/mauden"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>